@@ -1,3 +1,7 @@
+2008-02-09  Satoshi Nakagawa <artension@gmail.com>
+
+	Added /query support.
+
 2008-02-05  Satoshi Nakagawa <artension@gmail.com>
 
 	Prohibit adding a member when received join in a mode +a channel.
